# cnc-woodworking-app

./: .gitignore
backend/: package.json
backend/__tests__/: joineryEngine.test.js
cnc-woodworking-app/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
cnc-woodworking-app/.github/workflows/: deploy.yml
cnc-woodworking-app/backend/: handler.js  joineryEngine.js  package-lock.json  package.json  server.js
cnc-woodworking-app/cutlist-generator/: .gitignore  JOINERY_BUG_INVESTIGATION.md  pyproject.toml
cnc-woodworking-app/cutlist-generator/examples/: coffee_table_cutlist.json
cnc-woodworking-app/cutlist-generator/src/cutlist/: __init__.py  cli.py  load.py  render.py
cnc-woodworking-app/cutlist-generator/templates/: cutlist.css
cnc-woodworking-app/cutlist-generator/tests/: test_cutlist.py
cnc-woodworking-app/examples/: stool_spec.json
cnc-woodworking-app/frontend/: index.html  package-lock.json  package.json
cnc-woodworking-app/frontend/src/: App.jsx
cnc-woodworking-app/frontend/src/components/: JointViewer3D.jsx  TableViewer3D.jsx  ToolpathSimulator.jsx
cnc-woodworking-app/frontend/src/utils/: fractions.js
cnc-woodworking-app/infra/: cdk.json  package-lock.json  package.json
cnc-woodworking-app/infra/lib/: stack.js
cnc-woodworking-app/python-renderer/: README.md
cnc-woodworking-app/python-renderer/tests/: test_render.py
cnc-woodworking-app/src/cnc_furniture/spec/: schema.py
cutlist-generator/: README.md
cutlist-generator/src/cutlist/: pdf.py  stock_aggregator.py
cutlist-generator/templates/: cutlist.html.jinja
frontend/src/: App.jsx
frontend/src/components/: JointViewer3D.jsx
infra/lib/: stack.js
python-renderer/: pyproject.toml  render.py
python-renderer/examples/: coffee_table_cutlist.json
tests/: test_spec.py
(+2 files in other folders)
