[project]
name = "cnc-furniture"
version = "0.1.0"
description = "Parametric CNC furniture pipeline: spec -> 3D -> cut list + g-code"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "build123d>=0.10",
    "ocp-vscode>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
